--- a/主页面.html
+++ b/主页面.html
@@ -226,7 +226,7 @@
     <!-- 左侧：图片及姓名职位 -->
     <div class="flex-shrink-0 flex flex-col items-center">
       <!-- 总负责人图片 -->
-      <img src="总负责人.jpg" alt="宋老师" class="w-32 h-32 rounded-full object-cover border-4 border-white shadow-md">
+      <img src="https://github.com/qkf742/zhumeng/blob/main/a1.jpg" alt="宋老师" class="w-32 h-32 rounded-full object-cover border-4 border-white shadow-md">
       <h3 class="text-xl font-bold mt-4 text-gray-800">宋老师</h3>
       <p class="text-purple-600">华中区交付中心负责人</p>
     </div>
